--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Orbitron', sans-serif;
             background-color: #000;
             color: #0ff;
-            overflow: hidden;
+            overflow: auto;
         }
         .container {
             position: relative;
@@ -96,6 +96,7 @@
             top: 20px;
             left: 20px;
             font-size: 1.2em;
+            position: sticky; /* 使状态消息固定在顶部 */
             text-shadow: 0 0 5px #0ff;
         }
         #file-unlock {
@@ -131,6 +132,23 @@
             filter: blur(2px);
             opacity: 0;
             transition: all 0.5s ease-out;
+        }
+        @media (max-width: 600px) {
+            .container {
+                width: 95%;
+                padding: 10px;
+            }
+            h1 {
+                font-size: 24px;
+            }
+            .message, #message-board, #file-instructions {
+                padding: 15px;
+            }
+            .file {
+                display: block;
+                margin-bottom: 10px;
+                text-align: center;
+            }
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
